# qof

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  README.vcs  autogen.sh  configure.ac  qof.pc.in  qof.symbols.in  qofsql.symbols
backend/estron/: dwi-backend.c  qofmap.c
backend/file/: Makefile.am  qsf-backend.c  qsf-object.xsd.xml  qsf-xml.c
backend/gda/: qof-gda.c
backend/sqlite/: Makefile.am
debian/: changelog  control  libqof-dev.install  libqof-doc.doc-base.doxygen  libqof-doc.doc-base.website  libqof-doc.install  libqof2-backend-gda.install  libqof2-backend-qsf.install  libqof2.symbols
debian/tests/: testsuite
debian/trunk/debian/: changelog  control  copyright  libqof-data.install  libqof-dev.install  libqof-doc.links  libqof2-backend-gda.install  libqof2-backend-qsf.install  libqof2-backend-qsf.lintian-overrides  libqof2-backend-sqlite.install  libqof2.install  rules  svn-deblayout  watch  xcontrol
doc/: Makefile.am  doxygen.cfg.in  doxygen_main_page.c  doxygen_to_devhelp.xsl  qofdatelocale.txt  qofnumeric-example.txt
doc/html/: Makefile.am
examples/: kvp-object.c  my-object.c  my-object.h
examples/backend/: Makefile.am  my-instance.h  my-instance.sql
examples/gobject/: gobj-example.c
gobml/: README
lib/libsql/: Makefile.am  README
po/: ChangeLog  cs.po  de.po  fr.po  id.po  it.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  vi.po  zh_CN.po
qof/: .cvsignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  QOF_MANIFEST_ENG  QOF_MANIFEST_QSF  README  README.cvs  README.svn  README.transifex  TODO  autogen.sh  configure  configure.ac  configure.in  guid.c  kvputil-p.h  make-potfiles.in  md5.c  md5.h  qof-0.pc  qof-0.pc.in  qof-1.pc.in  qof-config.in  qof.h  qof.pc.in  qof.symbols.in  qofbackend.c  qofbackend.h  qofbook.c  qofbook.h  qofbookmerge.c  qofclass-p.h  qofclass.h  qofdate.c  qoferror-p.h  qoferror.h  qofevent-p.h  (+17 more)
qof/backend/: Makefile.am  README  backend-schema.xsd.xml
qof/backend/dwi/: Makefile.am  README  dwi-backend.c  qofmap.c  qofmap.h
qof/backend/estron/: Makefile.am  qofmap.c  qofmap.h
qof/backend/file/: .cvsignore  Makefile.am  README  backend-config.pl  pilot-qsf-gncCustomer.xml  qof-backend-qsf.h  qof-qsf.xml  qsf-backend-v0.1.xml  qsf-backend.c  qsf-dir.h.in  qsf-object.xsd.xml  qsf-xml-map.c  qsf-xml.c  qsf-xml.h
qof/backend/gda/: Makefile.am  qof-gda.c  qof-gda.h
qof/backend/sqlite/: Makefile.am  qof-sqlite.c  qof-sqlite.h
qof/debian/: changelog  control  copyright  libqof-backend-gda0.install  libqof-backend-qsf0.install  libqof-backend-qsf0.symbols  libqof-backend-sqlite0.install  libqof-backend-sqlite0.symbols  libqof-dev.install  libqof-doc.doc-base.doxygen  libqof-doc.doc-base.website  libqof-doc.install  libqof1-dbg.install  libqof1.install  libqof2-backend-qsf.install  libqof2-backend-sqlite.install  rules  watch
qof/debian/linda/overrides/: libqof-backend-gda0  libqof1
qof/doc/: .cvsignore  Makefile.am  README  backend-api.txt  backend-errors.txt  doxygen.cfg.in  doxygen_main_page.c  doxygen_to_devhelp.xsl  map-plan.txt
qof/doc/html/: .cvsignore  Makefile.am
qof/emdebian/: README.Debian  changelog  control  copyright  libqof-dev.install  libqof1.install  rules  watch
qof/examples/: .cvsignore  Makefile.am  README  kvp-object.c  kvp-object.h  my-object.c  my-object.h  query-example.c  sql-example.c  test-book-merge.c  test-qsf.c
qof/examples/backend/: .cvsignore  Makefile.am  my-app.c  my-instance.c  my-instance.h
qof/examples/gobject/: .cvsignore  Makefile  Makefile.am  gobj-example.c  qofgobj.c
qof/fink/: qof1.info
qof/gobml/: my-obj.gob
qof/lib/: Makefile.am  README
qof/lib/dwi/: Makefile.am  action.c  action.h  builder.c  builder.h  config.h  database.c  database.h  dui-initdb-p.h  dui-initdb.c  dui-initdb.h  dui-libdbi.c  dui-libdbi.h  dui-libpg.c  dui-libpg.h  dui-odbc.c  dui-odbc.h  duifield-gobj.c  duifield-gobj.h  duifield-gtk.c  duifield-gtk.h  duifield-hash.c  duifield-hash.h  duifield-qof.c  duifield-qof.h  duifield-sql.c  duifield-sql.h  duifield.c  duifield.h  duifieldmap.c  duifieldmap.h  duifilter.c  duifilter.h  duiresolver.c  duiresolver.h  duitxnquery.c  duitxnquery.h  duitxnreport.c  duitxnreport.h  interface.c  (+11 more)
qof/lib/libsql/: Makefile.am  README  mem.c  mem.h  sql_parser.c
qof/m4/: ChangeLog
qof/po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  cs.po  de.po  en_GB.po  fr.po  id.po  it.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  vi.po  zh_CN.po
qof/qof/: .cvsignore  FreqSpec.c  Makefile.am  deprecated-p.h  deprecated.c  deprecated.h  gnc-date.c  gnc-date.h  guid.c  guid.h  kvpframe.c  kvpframe.h  kvputil-p.h  kvputil.c  kvputil.h  libqof.ver  md5.c  md5.h  qof-be-utils.h  qof.h  qofbackend-p.h  qofbackend.c  qofbackend.h  qofbook-p.h  qofbook.c  qofbook.h  qofbookmerge.c  qofbookmerge.h  qofchoice.c  qofchoice.h  qofclass-p.h  qofclass.c  qofclass.h  qofdate-p.h  qofdate.c  qofdate.h  qoferror-p.h  qoferror.c  qoferror.h  qofevent-p.h  (+47 more)
qof/qof/test/: .cvsignore  Makefile.am  test-book-merge.c  test-date.c  test-engine-stuff.c  test-engine-stuff.h  test-event.c  test-guid.c  test-numeric.c  test-object.c  test-querynew.c  test-recursive.c  test-sql.c  test-stuff.c
qof/rpm/: qof1.spec
qof/src/: Makefile.am  gnc-date.c  gnc-date.h  gnc-engine-util.c  gnc-engine-util.h  gnc-numeric.h  kvp-util-p.h  qofbackend.h  qofbook.c  qofbook.h  qofclass.c  qofclass.h  qofid.h  qofinstance-p.h  qofinstance.h  qofquery-deserial.c  qofquery-deserial.h  qofquery-serialize.c  qofquery.c  qofquery.h  qofquerycore.c  qofquerycore.h  qofsql.c  qofsql.h
qof/test/: test-book-merge.c  test-engine-stuff.c  test-engine-stuff.h  test-event.c  test-recursive.c  test-sql.c  test-stuff.h
qof/website/: gobj-example.c.html  hacking.html  index.html  my-obj-example.c.html  qof.css  qof.html  start.html  why-qof.html
wiki/trunk/: gobj-example.c.mdwn  hacking.html  hacking.mdwn  index.html  index.mdwn  local.css  my-obj-example.c.mdwn  recentchanges.mdwn  sandbox.mdwn  start.html  start.mdwn  why-qof.mdwn
www/: start.html
(+42 files in other folders)
