SUBDIRS = lib qof . backend po doc

DIST_SUBDIRS = lib qof . backend po doc

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = qof.pc

EXTRA_DIST = config.rpath \
  po/POTFILES.skip \
  qof.pc.in \
  qofsql.symbols \
  website/gobj-example.c.html \
  website/my-obj-example.c.html \
  website/sflogosm.png \
  website/sflogolg.png \
  website/hacking.html \
  website/qof.css \
  website/why-qof.html \
  website/favicon.png \
  website/index.html \
  website/qof-logo.jpg

ACLOCAL_AMFLAGS = -I m4
